syntax = "proto3";
package emortal.message.gameplayerdata;

option java_package = "dev.emortal.api.message.gamedata";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/proto-specs/gen/go/message/gameplayerdata";

import "google/protobuf/descriptor.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/any.proto";
import "game_player_data/models.proto";

message UpdateGamePlayerDataMessage {
  string player_id = 1;
  model.gameplayerdata.GameDataGameMode game_mode = 2;

  // Generic data to be coerced into the correct type
  google.protobuf.Any data = 3;
  google.protobuf.FieldMask data_mask = 4;
}
