syntax = "proto3";
package emortal.model.gameplayerdata;

option java_package = "dev.emortal.api.model.gamedata";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/proto-specs/gen/go/model/gameplayerdata";

enum GameDataGameMode {
  TOWER_DEFENCE = 0;
  BLOCK_SUMO = 1;
  MINESWEEPER = 2;
}

// These messages exist for coercion of the generic data from GetGamePlayerData and the UpdateGamePlayerDataMessage
// WARNING: Unlike usual, as we are using a FieldMask the names of the fields DO MATTER, not just their number

message BlockSumoPlayerData {
  uint32 block_slot = 1;
  uint32 shears_slot = 2;
}

message TowerDefencePlayerData {} // todo

message MinesweeperPlayerData {
  uint32 length = 1;
  uint32 width = 2;
  uint32 mines = 3;
  string theme = 4;
  bool solvable = 5;
}
